--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera :)
+                Bienvenido
                 <span id="tagline">Tu blog de cabecera2</span>
             </div>
             <div id="post">
