--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.jpg" />
                 Bienvenido
                 <span id="tagline">Tu blog de cabecera2</span>
             </div>
